# sidrapy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_EN.md  LICENSE  MANIFEST.in  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main_workflow.yml
docs/: conf.py  index.rst
docs/modules/: get_table.rst  table.rst
requirements/: dev.in  dev.txt  development.in  development.txt  docs.in  docs.txt  documentation.in  documentation.txt  exec.txt  execution.in  execution_development.in  execution_lowest.in  tests.in  tests.txt
sidrapy/: __init__.py  table.py
sidrapy/resources/: handler.py
src/sidrapy/: __init__.py  server.py  table.py
src/sidrapy/resources/: __init__.py  handler.py  http_client.py
tests/integration/: test_basic.py
tests/unit/: test_basic.py  test_handler.py  test_server.py
