[metadata]
name = sidrapy
# Version needs regex in setup.py.
url = https://github.com/AlanTaranti/sidrapy
project_urls =
    Code = https://github.com/AlanTaranti/sidrapy
    Issue tracker = https://github.com/AlanTaranti/sidrapy/issues
license = MIT
maintainer = Alan Taranti
maintainer_email = alan.taranti@gmail.com
description = A library that provides a python interface for the IBGE SIDRA API.
keywords = ibge, sidra, api, brasil, brazil, estatistica, statistics
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT Licens
    Natural Language :: Portuguese (Brazilian)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.5
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = sidrapy

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    sidrapy
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
# slice notation whitespace, invalid
    E203
# line length, handled by bugbear B950
    E501
# bare except, handled by bugbear B001
    E722
# up to 88 allowed by bugbear B950
per-file-ignores =
    src/sidrapy/__init__.py:F401
max-line-length = 80
