[metadata]
name = sidrapy
# Version needs regex in setup.py.
url = https://github.com/AlanTaranti/sidrapy
project_urls =
    Code = https://github.com/AlanTaranti/sidrapy
    Issue tracker = https://github.com/AlanTaranti/sidrapy/issues
license = MIT
maintainer = Alan Taranti
maintainer_email = contato@alantaranti.me
description = A library that provides a python interface for the IBGE SIDRA API.
keywords = ibge, sidra, api, brasil, brazil, estatistica, statistics
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: Portuguese (Brazilian)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    sidrapy
    tests

[coverage:paths]
source =
    src
    */site-packages
